# arithmetic-expression-compiler

./: .gitignore  CMakeLists.txt  README.md
src/: .clang-format  CMakeLists.txt
src/lexer/: CMakeLists.txt  token.cpp  token.h  token_type.h  token_v.h
src/lexer/flex/: CMakeLists.txt  lex.cpp  lex.h  lex.l  main.cpp
src/lexer/flex/include/: unistd.h
src/lexer/manual/: CMakeLists.txt  lex.cpp  lex.h
src/lexer/regexp/: CMakeLists.txt  lex.cpp  lex.h  main.cpp
src/parser/: CMakeLists.txt  ast.cpp  ast.h
src/parser/bison/: CMakeLists.txt  main.cpp  parser.cpp  parser.h  parser.y
src/parser/manual/: CMakeLists.txt  main.cpp  parser.cpp  parser.h
